fix header on mobile

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,6 +3,7 @@
 .header {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-grow: 1;
   height: 345px;
   background-color: $black;
@@ -13,4 +14,15 @@
   width: 500px;
   background-size: contain;
   background-repeat: no-repeat;
+}
+
+@media only screen and (max-width: 480px) {
+  .header {
+    height: 250px;
+  }
+
+  .header-hero {
+    height: 250px;
+    width: 385px;
+  }
 }
